# streamgate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: simple_stream.py
streamgate/: config.py  main.py  models.py  router.py
streamgate/providers/: base.py  openai.py
tests/: test_router.py
