[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamgate"
version = "0.1.0"
description = "Real-time LLM streaming proxy with load balancing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
